<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">晓投资</string>
    <string name="action_settings">Settings</string>
    <string name="keep_accounts_hint_obj_name">&#12288;</string>
    <string name="keep_accounts_platform_name">平台名称</string>
    <string name="keep_accounts_value_date">起息时间</string>
    <string name="keep_accounts_object_name">标的名称</string>
    <string name="keep_accounts_investment_amount">投资金额</string>
    <string name="keep_accounts_bonus_principal">奖励本金</string>
    <string name="keep_accounts_total_investment">总本金</string>
    <string name="keep_accounts_repayment_method">还款方式</string>
    <string name="keep_accounts_period">周期</string>
    <string name="keep_accounts_money_rate">利率</string>
    <string name="keep_accounts_bid_reward">投标奖励</string>
    <string name="keep_accounts_extra_bonus">额外奖励</string>
    <string name="keep_accounts_due_automatic_repayment">到期自动还款</string>
    <string name="keep_accounts_due_automatic_repayment_note">还款当日24点自动将该笔还款设置为已还款</string>
    <string name="keep_accounts_hint_required_content">（必填）</string>
    <string name="keep_accounts_hint_optional_content">（选填）</string>
    <string name="keep_accounts_hint_choose_repayment_method">选择还款方式</string>
    <string name="keep_accounts_hint_choose_platform">点击选择平台</string>
    <string name="keep_accounts_hint_note">备注：选填（字数不超过50个字）</string>
    <string name="keep_accounts_btn_per_cent">%</string>
    <string name="keep_accounts_btn_yuan">元</string>
    <string name="keep_accounts_btn_month">月</string>
    <string name="keep_accounts_btn_day">天</string>
    <string name="keep_accounts_btn_annual_rate">年利率</string>
    <string name="keep_accounts_btn_day_rate">日利率</string>
    <string name="keep_accounts_btn_bide_back">投标回</string>
    <string name="keep_accounts_btn_terminally_back">每期回</string>
    <string name="keep_accounts_btn_maturity_back">到期回</string>
    <string name="keep_accounts_btn_interest_costs">利息管理费</string>
    <string name="keep_accounts_btn_enchashment_costs">取现手续费</string>
    <string name="keep_accounts_title_content">手动记账</string>
    <string name="keep_accounts_title_right">自动记账</string>
    <string name="keep_accounts_year_day_num">日利率按360天折算</string>
    <string name="continual_tally_title_name">资产流水</string>
    <string name="continual_tally_title_right">筛选</string>
    <string name="continual_tally_for_filter_title_content">筛选</string>
    <string name="continual_tally_for_filter_title_left">取消</string>
    <string name="continual_tally_for_filter_title_right">完成</string>
    <string name="continual_tally_for_filter_clear_conditions">清除筛选条件</string>
    <string name="continual_tally_for_filter_all_type">全部类型</string>
    <string name="continual_tally_for_filter_type_invest">投资</string>
    <string name="continual_tally_for_filter_type_back">回款</string>
    <string name="continual_tally_for_filter_only_show_last_back">只显示最后一期回款</string>
    <string name="continual_tally_for_filter_only_show_last_back_content">只显示每个标的的最后一期回款，不显示其他期的回款</string>
    <string name="continual_tally_for_filter_all_time">全部时间</string>
    <string name="continual_tally_for_filter_time_from">从</string>
    <string name="continual_tally_for_filter_time_end">到</string>
    <string name="continual_tally_for_filter_select_platform">选择平台</string>
    <string name="continual_tally_for_filter_all_platform">全部平台</string>
    <string name="finance_supermarket_fragment_name">金融超市</string>
    <string name="finance_supermarket_title_more">更多</string>
    <string name="finance_supermarket_title_platform">平台</string>
    <string name="finance_supermarket_title_choice">精选</string>
    <string name="finance_supermarket_more_invest_name">私人银行</string>
    <string name="finance_supermarket_more_invest_info_left">您的专属财富管家</string>
    <string name="finance_supermarket_more_invest_info_right">高端专享</string>
    <string name="finance_supermarket_more_insurance_name">海外投资</string>
    <string name="finance_supermarket_more_insurance_info_left">享受全球资产配置</string>
    <string name="finance_supermarket_more_insurance_info_right">贴心服务</string>
    <string name="finance_supermarket_more_credit_name">信用卡申请</string>
    <string name="finance_supermarket_more_credit_info_left">各大银行均可办理</string>
    <string name="finance_supermarket_more_credit_info_right">方便快捷</string>
    <string name="finance_supermarket_more_financing_name">快速融资</string>
    <string name="finance_supermarket_more_financing_info_left">信用、抵押、担保、保理</string>
    <string name="finance_supermarket_more_financing_info_right">到账迅速</string>
    <string name="finance_supermarket_more_impawn_name">典当</string>
    <string name="finance_supermarket_more_impawn_info_left">快速变现</string>
    <string name="finance_supermarket_target_detail_info">项目信息</string>
    <string name="finance_supermarket_target_detail_button">立即投资</string>
    <string name="finance_supermarket_target_detail_jiaxi_type_first">首投加息</string>
    <string name="finance_supermarket_target_detail_jiaxi_type_not_first">晓投资加息</string>
    <string name="finance_supermarket_target_detail_rep_method">还款方式：%s</string>
    <string name="finance_supermarket_target_detail_button_popu_title">即将帮您创建%s新账户</string>
    <string name="finance_supermarket_target_detail_button_popu_create">快速创建</string>
    <string name="finance_supermarket_target_detail_button_popu_binding">已经有帐号，去绑定</string>
    <string name="finance_supermarket_target_list_title_right">平台档案</string>
    <string name="finance_supermarket_target_list_yield_info">年化率</string>
    <string name="finance_supermarket_target_list_period_info">投资期限</string>
    <string name="finance_supermarket_target_list_plus_sign">+</string>
    <string name="title_activity_calc">史上最屌计算器</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="activity_txt_press_again_to_exit_the_program">再按一次退出程序</string>
    <string name="register_pass_digits">._!@#$%^*()0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="title_activity_login_and_register">LoginAndRegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_get_back_password">GetBackPasswordActivity</string>
    <string name="title_activity_recent_return_money">RecentReturnMoneyActivity</string>
    <string name="title_activity_my_invest">MyInvestActivity</string>
    <string name="title_activity_invest_situation">InvestSituationActivity</string>
    <string name="title_activity_invest_scale">InvestScaleActivity</string>
    <string name="title_activity_invest_list">InvestListActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_invest_detail">InvestDetailActivity</string>
    <string name="title_activity_bid_edit">BidEditActivity</string>
    <string name="activity_txt_password_is_less_than_six">密码少于6位</string>
    <string name="acitvity_txt_password_is_greater_than_sixteen">密码大于16位</string>
    <string name="activity_txt_please_enter_the_phone_number">请输入手机号</string>
    <string name="activity_txt_please_enter_the_correct_phone_number">请输入正确的手机号码</string>
    <string name="activity_txt_get_the_code_fails">获取验证码失败</string>
    <string name="activity_txt_two_passwords_are_not_the_same">两次输入的密码不一样</string>
    <string name="activity_txt_invitation_code_if_any">邀请码(如果有)</string>
    <string name="activity_txt_register">注册</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="cal_toubiaojiangli">含投标奖励：%s元</string>
    <string name="cal_lixiguanlifei">含利息管理：%s元</string>
    <string name="cal_return_way_dengebenxi">等额本息</string>
    <string name="cal_return_way_dengebenjin">等额本金</string>
    <string name="cal_return_way_daoqihuanbenxi">到期还本息</string>
    <string name="cal_return_way_daoqihuanbenjin">按月付息，到期还本</string>
    <string name="cal_only_daoqihuanbenxi_can_by_day">只有“到期还本息”能按天还</string>
    <string name="activity_title_playful_little_calculator">计算器</string>
    <string name="activity_txt_actual_income">实际收益</string>
    <string name="activity_txt_including_tender_award">含投标奖励：0元</string>
    <string name="activity_txt_including_interest_management_fees">含利息管理：0元</string>
    <string name="activity_txt_the_actual_rate_of_return">实际收益率</string>
    <string name="activity_txt_principal_receivable">应收本金</string>
    <string name="activity_txt_issue">期号</string>
    <string name="activity_txt_income_receivable_net_of_management_fees_one">应收收益</string>
    <string name="activity_txt_total_paid">实收总额</string>
    <string name="activity_txt_interest_rate_one">利率 %</string>
    <string name="activity_txt_bid_deadline">投标期限</string>
    <string name="activity_txt_interest_management_fees">利息管理费 %</string>
    <string name="activity_txt_reward_one">投标奖励 %</string>
    <string name="activity_txt_Reset">重置</string>
    <string name="tpl_pls_selected_at_least_on_tpl">请先至少选择一个模板</string>
    <string name="tpl_request_failed_pls_chk_network">网络似乎有问题</string>
    <string name="json_parse_exception">数据解析发生异常</string>
    <string name="tpl_unknow_err">未知错误，错误码：</string>
    <string name="activity_my_model_btn_text_cancel">取消</string>
    <string name="activity_my_model_remove_templates">删除模板</string>
    <string name="activity_my_model_select_all">全选</string>
    <string name="activity_my_model_delete">删除</string>
    <string name="activity_my_recent_12_month_investment_ratio_analysis">最近12个月投资比例分析</string>
    <string name="activity_my_10_pen_investment">0笔</string>
    <string name="activity_txt_sure">确定</string>
    <string name="can_return_err_3011">回款状态不能再改变</string>
    <string name="can_return_err_3012">先回上一期才能回这期</string>
    <string name="can_return_err_9000">更新失败</string>
    <string name="back_money_plan_tab_stay_txt">待回款项</string>
    <string name="back_money_plan_tab_already_txt">已回款项</string>
    <string name="back_money_plan_tab_overdue_txt">逾期款项</string>
    <string name="activity_txt_choose">选择</string>
    <string name="activity_txt_hint">请先选择，再进行操作</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_activity_flatform_detail">FlatformDetailActivity</string>
    <string name="title_activity_platform_web">PlatformWebActivityActivity</string>
    <string name="activity_txt_operating">操作</string>
    <string name="activity_txt_has_also">已还</string>
    <string name="activity_txt_overdue">逾期</string>
    <string-array name="Payment_method">
        <item>等额本息</item>
        <item>等额本金</item>
        <item>到期还本息</item>
        <item>按月付息，到期还本</item>
    </string-array>
    <string name="account_cannot_be_edit">此标已开始回款，不能再编辑</string>
    <string name="account_err_3001">新增投资失败</string>
    <string name="account_err_3002">修改投资失败</string>
    <string name="account_err_3004">投资金额必须大于0</string>
    <string name="activity_txt_the_principal_amount_to_be_received">待收本金</string>
    <string name="activity_txt_repayment_date">还款日期</string>
    <string name="activity_txt_status">状态</string>
    <string name="activity_txt_principal_one">本金</string>
    <string name="activity_txt_earnings_one">收益</string>
    <string name="activity_txt_total_one">总额</string>
    <string name="activity_txt_filter">筛选</string>
    <string name="activity_txt_fill_in_the_platform_name">填写平台名称</string>
    <string name="activity_txt_platform_title">平台名称</string>
    <string name="activity_txt_volume">评级</string>
    <string name="activity_txt_the_number_of_investment">投资人数</string>
    <string name="activity_txt_interest_rate">平均利率</string>
</resources>