<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/ll_calculator_result_list_header"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/activity_txt_issue"
            android:textColor="#333333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_txt_principal_receivable"
            android:textColor="#333333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_txt_income_receivable_net_of_management_fees_one"
            android:textColor="#333333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_txt_the_principal_amount_to_be_received"
            android:textColor="#333333"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_txt_total_paid"
            android:textColor="#333333"
            android:textSize="13sp"/>
    </LinearLayout>
</merge>