<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/finance_supermarket_bg"
              android:layout_height="match_parent">

    <include layout="@layout/top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_finance_supermarket_tv_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/finance_supermarket_title_choice"
            android:textColor="@color/finance_supermarket_title_unselect"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fragment_finance_supermarket_tv_platform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/finance_supermarket_title_platform"
            android:textColor="@color/finance_supermarket_title_unselect"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fragment_finance_supermarket_tv_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/finance_supermarket_title_more"
            android:textColor="@color/finance_supermarket_title_unselect"
            android:textSize="15sp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_finance_supermarket_rl_line_container"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/e" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_finance_supermarket_fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>