<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:id="@+id/totalGetMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:padding="0dp"
        android:singleLine="true"
        android:text="0.00"
        android:textColor="#2d7dee"
        android:textSize="34sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/totalGetMoney"
        android:padding="0dp"
        android:text="元"
        android:textColor="#7c7c7c"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="64dp"
        android:text="@string/activity_txt_actual_income"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7c7c7c"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/myExtraMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="50dp"
        android:text="@string/activity_txt_including_tender_award"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7c7c7c"/>

    <TextView
        android:id="@+id/myCostMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/myExtraMoney"
        android:layout_marginRight="14dp"
        android:layout_marginTop="3dp"
        android:text="@string/activity_txt_including_interest_management_fees"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7c7c7c"/>

    <TextView
        android:id="@+id/realRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="6dp"
        android:text="0.00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFE93434"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/realRate"
        android:text="%"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#7c7c7c"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/realRate"
        android:layout_alignStart="@+id/realRate"
        android:layout_below="@+id/realRate"
        android:layout_marginTop="4dp"
        android:text="@string/activity_txt_the_actual_rate_of_return"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7c7c7c"
        android:textSize="16sp"/>

    <View
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="100dp"
        android:background="@color/f"/>

</RelativeLayout>
