<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <!--顶部 标题栏-->
    <LinearLayout
        android:id="@+id/layout_net_platforms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/style_current_title"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_net_platform_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:src="@mipmap/arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="晓投资"
                android:textColor="@color/title_text_second"
                android:textSize="14sp"
                android:visibility="gone"/>
        </LinearLayout>


        <TextView
            android:id="@+id/platform_search"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/platform_edittext_bg_shape"
            android:drawableLeft="@mipmap/search_icon"
            android:gravity="center_vertical"
            android:hint="@string/activity_txt_fill_in_the_platform_name"
            android:textSize="13sp"/>

        <LinearLayout
            android:id="@+id/layout_platform_shaixuan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:paddingRight="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/platform_choice_top_right_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/activity_txt_filter"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_platform_shaixuan_arrow"
                android:src="@mipmap/btn_im"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>


    </LinearLayout>
    <!--<View-->
    <!--android:background="@color/e"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"/>-->

    <GridView
        android:id="@+id/gv_choose_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9e9e9"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:padding="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"/>

    <!--内容标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:text="@string/activity_txt_platform_title"
                android:textColor="@color/d"
                android:textSize="15sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:background="@color/e"/>

            <com.ypwl.xiaotouzi.view.CheckableSortItem
                android:id="@+id/sort_item_pingji"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                app:item_text="@string/activity_txt_volume"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:background="@color/e"/>

            <com.ypwl.xiaotouzi.view.CheckableSortItem
                android:id="@+id/sort_item_renshu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:item_text="@string/activity_txt_the_number_of_investment"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:background="@color/e"/>

            <com.ypwl.xiaotouzi.view.CheckableSortItem
                android:id="@+id/sort_item_lilv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:item_text="@string/activity_txt_interest_rate"/>
        </LinearLayout>

        <!--内容视图-->
        <View
            android:id="@+id/platform_divider_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:background="@color/e"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.andview.refreshview.XRefreshView
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ListView
                    android:id="@+id/lv_content_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:clipToPadding="false"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:fadingEdge="none"
                    android:scrollbarStyle="outsideOverlay"/>
            </com.andview.refreshview.XRefreshView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/layout_no_data_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:visibility="visible"/>
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/layout_hint_pb_loading"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:indeterminateDrawable="@drawable/loading_progress_wait"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>
</LinearLayout>